tests/fixtures/dimensions/change_blast_radius/bad/u7.ts
import { core } from "./core";
export const u7 = core + 7;
